// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AuthorsSection component should render NTRO design form fields 1`] = `
<Section
  cards={
    [
      {
        "groups": [
          [
            "authors",
          ],
        ],
        "title": "Designers",
      },
      {
        "groups": [
          [
            "editors",
          ],
        ],
        "title": "Consultants",
      },
    ]
  }
  disabled={false}
/>
`;

exports[`AuthorsSection component should render default view 1`] = `
<Section
  cards={
    [
      {
        "groups": [
          [
            "authors",
          ],
        ],
        "title": "Authors",
      },
    ]
  }
  disabled={false}
/>
`;

exports[`AuthorsSection component should render disabled view 1`] = `
<Section
  cards={
    [
      {
        "groups": [
          [
            "authors",
          ],
        ],
        "title": "Authors",
      },
    ]
  }
  disabled={true}
/>
`;

exports[`AuthorsSection component should render edited book form fields 1`] = `
<Section
  cards={
    [
      {
        "groups": [
          [
            "editors",
          ],
        ],
        "title": "Editors",
      },
    ]
  }
  disabled={false}
/>
`;

exports[`AuthorsSection component should render non-NTRO design form fields 1`] = `
<Section
  cards={
    [
      {
        "groups": [
          [
            "authors",
          ],
        ],
        "title": "Designers",
      },
      {
        "groups": [
          [
            "editors",
          ],
        ],
        "title": "Contributors",
      },
    ]
  }
  disabled={false}
/>
`;
